# wag

./: .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PYTHON_ADMINUI_SUMMARY.md  README.md  README_PYTHON.md  docker_entrypoint.sh  example_config.json  main.go  pixi.toml  pyproject.toml  wag.service
.github/workflows/: test_and_deploy.yml
test/unit/: test_acls.py  test_fsops.py
tests/unit/: test_adminui.py  test_core_modules.py  test_queue.py  test_routetypes.py
wag/: __init__.py  main.py
wag/adminui/: README.md  __init__.py  clustering.py  devices.py  diagnostics.py  info.py  models.py  policies.py  registration.py  server.py  settings.py  users.py  webhooks.py
wag/commands/: command.py  config.py  devices.py  firewall.py  registration.py  start.py  users.py  version.py  webadmin.py
wag/internal/acls/: __init__.py  acls.py
wag/internal/config/: __init__.py  config.py
wag/internal/data/: __init__.py  database.py  models.py
wag/internal/mfaportal/: server.py
wag/internal/publicwebserver/: server.py
wag/internal/router/: __init__.py  firewall.py
wag/internal/routetypes/: __init__.py  key.py  parser.py  policy.py
wag/internal/users/: __init__.py  user.py
wag/pkg/control/: client.py  server.py
wag/pkg/fsops/: __init__.py  copy.py
wag/pkg/queue/: __init__.py  queue.py
wag/pkg/safedecoder/: __init__.py  safe.py
