[project]
name = "wag"
version = "7.0.0"
description = "Wag adds MFA, route restriction and device enrolment to WireGuard"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0"}
authors = [
    {name = "NHAS", email = ""},
]
keywords = ["wireguard", "vpn", "mfa", "2fa", "security", "authentication"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Security",
]

dependencies = [
    "click>=8.1.7",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "cryptography>=44.0.0",
    "pyotp>=2.9.0",
    "qrcode>=8.0",
    "Pillow>=11.0.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.1",
    "python-pam>=2.0.2",
    "authlib>=1.3.2",
    "itsdangerous>=2.2.0",
    "aiofiles>=24.1.0",
    "jinja2>=3.1.4",
    "websockets>=14.1",
    "py-etcd>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "httpx>=0.28.1",
]

[project.scripts]
wag = "wag.main:cli"

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wag", "wag.commands", "wag.internal", "wag.internal.config", 
            "wag.internal.data", "wag.internal.router", "wag.internal.acls",
            "wag.internal.users", "wag.internal.interfaces", "wag.internal.mfaportal",
            "wag.internal.publicwebserver", "wag.internal.autotls", "wag.internal.utils",
            "wag.adminui", "wag.pkg", "wag.pkg.control"]

[tool.black]
line-length = 120
target-version = ['py311', 'py312']

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
